--- a/public/main.css
+++ b/public/main.css
@@ -13,10 +13,12 @@ body {
 }
 
 .card-stack-title {
+  margin-bottom: 60px;
   text-align: center;
 }
 
 .card {
+  position: relative;
   min-height: 400px;
   width: 500px;
   padding: 15px;
@@ -26,18 +28,30 @@ body {
   background-color: white;
   border-radius: 5px;
   text-align: center;
-  cursor: pointer;
   box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.2);
 }
 
 .helper-text {
   font-size: 12px;
   color: #999;
-  margin-bottom: 100px;
+  margin-bottom: 70px;
+}
+
+.card-content {
+  min-height: 150px;
+  padding-top: 30px;
+  cursor: pointer;
+}
+
+.card-stack-navigation-container {
+  position: absolute;
+  bottom: 30px;
+  width: 500px;
 }
 
 .card-stack-navigation {
   position: relative;
+  bottom: 15px;
   width: 300px;
   margin-right: auto;
   margin-left: auto;
