--- a/public/main.css
+++ b/public/main.css
@@ -21,6 +21,7 @@ body {
   position: relative;
   min-height: 400px;
   width: 500px;
+  max-width: 90%;
   padding: 15px;
   margin-bottom: 30px;
   margin-right: auto;
@@ -47,12 +48,14 @@ body {
   position: absolute;
   bottom: 30px;
   width: 500px;
+  max-width: 90%;
 }
 
 .card-stack-navigation {
   position: relative;
   bottom: 15px;
   width: 300px;
+  max-width: 90%;
   margin-right: auto;
   margin-left: auto;
 }
