--- a/public/main.css
+++ b/public/main.css
@@ -18,11 +18,13 @@ body {
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
   position: relative;
-  min-height: 400px;
+  min-height: 300px;
   width: 500px;
   max-width: 90%;
-  padding: 15px;
+  padding-top: 15px;
   margin-bottom: 30px;
   margin-right: auto;
   margin-left: auto;
@@ -32,40 +34,52 @@ body {
   box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.2);
 }
 
-.helper-text {
-  font-size: 12px;
+.card-helper-text {
+  flex-grow: 2;
+  padding-right: 15px;
+  padding-left: 15px;
   color: #999;
-  margin-bottom: 70px;
-}
-
-.card-content {
-  min-height: 150px;
-  padding-top: 30px;
+  font-size: 12px;
   cursor: pointer;
 }
-
-.card-stack-navigation-container {
-  position: absolute;
-  bottom: 30px;
-  width: 500px;
-  max-width: 90%;
+.card.flipped .card-helper-text {
+  flex-grow: 0;
 }
 
-.card-stack-navigation {
-  position: relative;
-  bottom: 15px;
-  width: 300px;
-  max-width: 90%;
-  margin-right: auto;
-  margin-left: auto;
+.card-front {
+  flex-grow: 2;
+  padding-right: 15px;
+  padding-left: 15px;
+  cursor: pointer;
+  align-items: center;
+}
+.card.flipped .card-front {
+  flex-grow: 0;
+}
+
+.card-back {
+  padding-right: 15px;
+  padding-left: 15px;
+  flex-grow: 2;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+.card-back-content {
+  align-self: center;
+}
+
+.card-navigation {
+  flex-grow: 0;
+  height: 45px;
+  display: flex;
 }
 
 .navigation-button {
-  width: 45%;
-  height: 30px;
+  width: 50%;
+  height: 45px;
   border: none;
   background-color: white;
-  border-radius: 5px;
   text-align: center;
   cursor: pointer;
 
@@ -79,9 +93,11 @@ body {
 .prev-navigation { 
   position: absolute;
   left: 0;
+  border-bottom-left-radius: 5px;
 }
 
 .next-navigation { 
   position: absolute;
   right: 0;
+  border-bottom-right-radius: 5px;
 }
