--- a/public/main.css
+++ b/public/main.css
@@ -35,15 +35,13 @@ body {
 }
 
 .card-helper-text {
-  flex-grow: 2;
-  padding-right: 15px;
-  padding-left: 15px;
+  position: absolute;
+  width: 500px;
+  text-align: center;
+  top: 10px;
   color: #999;
   font-size: 12px;
   cursor: pointer;
-}
-.card.flipped .card-helper-text {
-  flex-grow: 0;
 }
 
 .card-front {
@@ -51,7 +49,12 @@ body {
   padding-right: 15px;
   padding-left: 15px;
   cursor: pointer;
-  align-items: center;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+.card-front-content {
+  align-self: center;
 }
 .card.flipped .card-front {
   flex-grow: 0;
@@ -90,13 +93,13 @@ body {
   background-color: #f8f8f8;
 }
 
-.prev-navigation { 
+.mark-card-incorrect { 
   position: absolute;
   left: 0;
   border-bottom-left-radius: 5px;
 }
 
-.next-navigation { 
+.mark-card-correct { 
   position: absolute;
   right: 0;
   border-bottom-right-radius: 5px;
